Fix alignment

--- a/css/RadioDanaStyle.css
+++ b/css/RadioDanaStyle.css
@@ -1,6 +1,4 @@
 body {
-	top: 0;
-	position: fixed;
 	height: 100vh;
 	background-image: url('../images/RadioDanaM.jpg');
 	background-repeat: no-repeat;
